Lesson-11-Ingress/ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Copyleft (c) by Denis Astahov 2021
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: kubehost1
    http:
      paths:
        - backend:
           serviceName: main
           servicePort: 80

  - host: kubehost2
    http:
      paths:
        - backend:
           serviceName: web1
           servicePort: 80

  - host: kubehost3
    http:
      paths:
        - backend:
           serviceName: web2
           servicePort: 80

  - host: kubehost4
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
